--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -154,12 +154,12 @@
 <!--RidesEnd-->
 <!--About us-->
 <section id="about" class="position-relative   mt-4" style="background: #FDFDFD">
-    <div class="text-center justify-content-center mt-5 ">
+    <div class="text-center justify-content-center mt-5 position-relative" style="top: 32px">
         <span class="position-relative" style="font-family: 'Playpen Sans', cursive; font-size: 20px; color: #0f6674; top: 20px" >ABOUT US</span>
         <h1 class="position-relative" style="font-family: 'Abel', sans-serif; top: 10px">Best Customer Experience
         </h1>
     </div>
-    <div class="container">
+    <div class="container position-relative " style="top: 78px;">
         <div class="row">
         <div id="aboutimge" class="col-6  ">
             <img src="assets/img/web/about.png" width="650px" class="mt-4 position-relative" style="right: 50px">
@@ -228,56 +228,143 @@
 -->
 
 <!-- Team Start -->
-<div class="container-fluid py-5">
+<div class="container-fluid py-5 position-relative " style="bottom: 110px">
     <div class="container py-5">
-        <h1 class="display-1 text-primary text-center">04</h1>
-        <h1 class="display-4 text-uppercase text-center mb-5">Meet Our Team</h1>
+        <div class="text-center justify-content-center mt-5 ">
+            <span class="position-relative" style="font-family: 'Playpen Sans', cursive; font-size: 20px; color: #0f6674; " >Car</span>
+            <h1 class="position-relative" style="font-family: 'Abel', sans-serif; ">Check Our Car Stock
+            </h1>
+        </div>
         <div class="owl-carousel team-carousel position-relative" style="padding: 0 30px;">
             <div class="team-item">
-                <img class="img-fluid w-100" src="img/team-1.jpg" alt="">
+                <img class="img-fluid " src="assets/img/2016-suzuki-alto-01_orig.jpeg" alt="" style="height: 180px">
                 <div class="position-relative py-4">
-                    <h4 class="text-uppercase">Full Name</h4>
+                    <h4 class="text-uppercase">Suzuki Alto  Premium</h4>
                     <p class="m-0">Designation</p>
                     <div class="team-social position-absolute w-100 h-100 d-flex align-items-center justify-content-center">
-                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <ul class="card-list d-flex " style="justify-content: space-between; flex-direction: column" >
+
+                            <li class="card-list-item" style="flex:1;text-align: left">
+                                <i class="fa-solid fa-users" style="color: #ffa629;"></i>
+                                <span class="card-item-text" style="color: white;font-size: 16px">4 People</span>
+                            </li>
+
+                            <li class="card-list-item">
+                                <i class="fa-solid fa-gas-pump" style="color: #f29107;"></i>
+                                <span class="card-item-text">Petrol</span>
+                            </li>
+
+                            <li class="card-list-item">
+                                <i class="fa-solid fa-gauge" style="color: #f29107;"></i>
+                                <span class="card-item-text">5.3km / 1-litre</span>
+                            </li>
+
+                            <li class="card-list-item">
+                                <i class="fa-solid fa-microchip" style="color: #f29107;"></i>
+                                <span class="card-item-text">Automatic</span>
+                            </li>
+
+                        </ul>
+
                     </div>
                 </div>
             </div>
             <div class="team-item">
-                <img class="img-fluid w-100" src="img/team-2.jpg" alt="">
+                <img class="img-fluid " src="assets/img/side.jpg" alt="" style="height: 204px">
                 <div class="position-relative py-4">
-                    <h4 class="text-uppercase">Full Name</h4>
-                    <p class="m-0">Designation</p>
+                    <h4 class="text-uppercase">Perodua Axia</h4>
+                    <p class="m-0">Genaral</p>
                     <div class="team-social position-absolute w-100 h-100 d-flex align-items-center justify-content-center">
-                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <ul class="card-list d-flex mt-2 " style="justify-content: space-between; flex-direction: column" >
+
+                            <li class="card-list-item" style="flex:1;text-align: left">
+                                <i class="fa-solid fa-users" style="color: #ffa629;"></i>
+                                <span class="card-item-text" style="color: white;font-size: 16px">4 People</span>
+                            </li>
+
+                            <li class="card-list-item">
+                                <i class="fa-solid fa-gas-pump" style="color: #f29107;"></i>
+                                <span class="card-item-text">Petrol</span>
+                            </li>
+
+                            <li class="card-list-item">
+                                <i class="fa-solid fa-gauge" style="color: #f29107;"></i>
+                                <span class="card-item-text">5.3km / 1-litre</span>
+                            </li>
+
+                            <li class="card-list-item">
+                                <i class="fa-solid fa-microchip" style="color: #f29107;"></i>
+                                <span class="card-item-text">Automatic</span>
+                            </li>
+
+                        </ul>
+
                     </div>
                 </div>
             </div>
             <div class="team-item">
-                <img class="img-fluid w-100" src="img/team-3.jpg" alt="">
+                <img class="img-fluid w-100" src="assets/img/front.png" alt="">
                 <div class="position-relative py-4">
                     <h4 class="text-uppercase">Full Name</h4>
                     <p class="m-0">Designation</p>
                     <div class="team-social position-absolute w-100 h-100 d-flex align-items-center justify-content-center">
-                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <ul class="card-list d-flex " style="justify-content: space-between; flex-direction: column" >
+
+                            <li class="card-list-item" style="flex:1;text-align: left">
+                                <i class="fa-solid fa-users" style="color: #ffa629;"></i>
+                                <span class="card-item-text" style="color: white;font-size: 16px">4 People</span>
+                            </li>
+
+                            <li class="card-list-item">
+                                <i class="fa-solid fa-gas-pump" style="color: #f29107;"></i>
+                                <span class="card-item-text">Petrol</span>
+                            </li>
+
+                            <li class="card-list-item">
+                                <i class="fa-solid fa-gauge" style="color: #f29107;"></i>
+                                <span class="card-item-text">5.3km / 1-litre</span>
+                            </li>
+
+                            <li class="card-list-item">
+                                <i class="fa-solid fa-microchip" style="color: #f29107;"></i>
+                                <span class="card-item-text">Automatic</span>
+                            </li>
+
+                        </ul>
+
                     </div>
                 </div>
             </div>
             <div class="team-item">
-                <img class="img-fluid w-100" src="img/team-4.jpg" alt="">
+                <img class="img-fluid w-100" src="assets/img/toyotaprifront.jpeg" alt="">
                 <div class="position-relative py-4">
-                    <h4 class="text-uppercase">Full Name</h4>
-                    <p class="m-0">Designation</p>
+                    <h4 class="text-uppercase">Toyota prius C/Aqua</h4>
+                    <p class="m-0">Genaral</p>
                     <div class="team-social position-absolute w-100 h-100 d-flex align-items-center justify-content-center">
-                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <ul class="card-list d-flex " style="justify-content: space-between; flex-direction: column" >
+
+                            <li class="card-list-item" style="flex:1;text-align: left">
+                                <i class="fa-solid fa-users" style="color: #ffa629;"></i>
+                                <span class="card-item-text" style="color: white;font-size: 16px">4 People</span>
+                            </li>
+
+                            <li class="card-list-item">
+                                <i class="fa-solid fa-gas-pump" style="color: #f29107;"></i>
+                                <span class="card-item-text">Petrol</span>
+                            </li>
+
+                            <li class="card-list-item">
+                                <i class="fa-solid fa-gauge" style="color: #f29107;"></i>
+                                <span class="card-item-text">5.3km / 1-litre</span>
+                            </li>
+
+                            <li class="card-list-item">
+                                <i class="fa-solid fa-microchip" style="color: #f29107;"></i>
+                                <span class="card-item-text">Automatic</span>
+                            </li>
+
+                        </ul>
+
                     </div>
                 </div>
             </div>
@@ -396,10 +483,13 @@
 </section>
 <!-- End Register A Customer -->
 <!-- Testimonial Start -->
-<section id="reviews">
+<section id="reviews ">
     <div class="container-fluid py-5 position-relative" style="bottom:200px;background: #FDFDFD">
-        <div class="container py-5">
-            <h1 class="display-4 text-uppercase text-center mb-5">Our Client's Say</h1>
+        <div class="container py-5 position-relative" style="bottom: 50px">
+            <div class="text-center justify-content-center mt-5 ">
+                <span class="position-relative" style="font-family: 'Playpen Sans', cursive; font-size: 20px; color: #0f6674;bottom: 48px " >Reviews</span>
+                <h1 class="position-relative" style="font-family: 'Abel', sans-serif;bottom: 38px ">Our Client'S Say</h1>
+            </div>
             <div class="owl-carousel testimonial-carousel">
                 <div class="testimonial-item d-flex flex-column justify-content-center px-4">
                     <div class="d-flex align-items-center justify-content-between mb-3">
@@ -445,8 +535,11 @@
 <!-- Testimonial End -->
 <!--contact start-->
 <section id="contact"><div class="container-fluid py-5 position-relative" style="bottom:200px;">
-    <div class="container pt-5 pb-3">
-        <h1 class="display-4 text-uppercase text-center mb-5">Contact Us</h1>
+    <div class="container pt-5 pb-3 position-relative" style="bottom: 50px;">
+        <div class="text-center justify-content-center mt-5 ">
+            <span class="position-relative" style="font-family: 'Playpen Sans', cursive; font-size: 20px; color: #0f6674;bottom: 48px " >Contact</span>
+            <h1 class="position-relative" style="font-family: 'Abel', sans-serif;bottom: 38px ">Further Details Contact Us</h1>
+        </div>
         <div class="row">
             <div class="col-lg-7 mb-2">
                 <div class="contact-form bg-light mb-4" style="padding: 30px;">
