--- a/Front_End/index.html
+++ b/Front_End/index.html
@@ -46,7 +46,7 @@
                     <li><a style="text-decoration: none" href="#about">About</a></li>
                     <li><a style="text-decoration: none" href="#checkCar">Car</a></li>
                     <li><a style="text-decoration: none" href="#Register-customer-new">Register</a></li>
-                    <li><a style="text-decoration: none" href="#reviews">Reviews</a></li>
+                    <li><a style="text-decoration: none" href="#reviews ">Reviews</a></li>
                     <li><a style="text-decoration: none" href="#contact">Contact</a></li>
 
                 </ul>
@@ -391,8 +391,7 @@
                     <div class="row">
                         <div class="col-lg-5 col-md-10"  style="margin-top: 16px">
                             <label class="form-label" for="user_Id">User Id</label>
-                            <input style="border-radius:12px;" class="form-control " id="user_Id" name="user_Id" readonly
-                                   type="text">
+                            <input style="border-radius:12px;" class="form-control " id="user_Id" name="user_Id" readonly type="text">
                             <span class="control-error"></span>
 
                         </div>
